2010-08-23  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15527: Enhance t3lib_db_PreparedStatement (thanks to Helmut Hummel)

2010-08-23  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15526: No recipient is logged to syslog if sending of mail failed in t3lib_utility_Mail (Thanks to Helmut Hummel)

2010-08-22  Francois Suter  <francois@typo3.org>

	* Fixed bug #15102: Scheduler: BE module does not use new skin properly (TYPO3 4.5)
	* Fixed bug #14949: "View Item" does not resolve real MM-relations (thanks to Caspar Stuebs)

2010-08-20 Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15514: Wrong encoded confirm message in User Admin Module (Thanks to Sven Juergens)
	* Fixed bug #15507: MEDIA content element ignores stdWrap configuration (Thanks to Jigal van Hemert)

2010-08-19  Ingo Renner  <ingo@typo3.org>

	* Fixed naming of class.t3lib_db_preparedstatement.php in core_autoload.php

2010-08-19  Steffen Kamper  <steffen@typo3.org>

	* Added feature #15421: [felogin] Possibility to show logout form direct after login
	* Fixed bug #15494: fatal error in phpunit BE module
	* Added feature #15425: [develop] debug all sql queries

2010-08-19  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15505: t3lib_cache_backend_TransientMemoryBackend is not referenced
	* Follow-up to #15457: Slightly modified API to be strict on param type guessing
	* Added feature #15457: Add support for prepared queries

2010-08-19  Francois Suter  <francois@typo3.org>

	* Fixed bug #15048: Workspaces: Autopublication task has too many rights
	* Fixed bug #15241: Recognize php-fpm sapi for path generation (thanks to Nikolas Hagelstein)

2010-08-16 Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #15437: Refactor of recycler - fix of CheckboxSelectionModel

2010-08-15 Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15437: Refactor of recycler
	* Fixed bug #15424: [web_info] allow more than 3 levels for pagetree overview and localization overview